syntax = "proto3";
import "job.proto";
package message;

message RespJob {
    int32 Status = 1;
    string Message = 2;
    repeated Job Data = 3;
}

message RespExec {
    int32 Status = 1;
    string Message = 2;
    repeated Execution Data = 3;
}