syntax = "proto3";
//import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package message;

service job {
    rpc GetJob (Params) returns (Job) {
    }
    rpc ExecDone (Execution) returns (google.protobuf.Empty) {
    }
}

message Params {
    string Name = 1; // Job name
    string Region = 2; // Job region
}

message Job {
    string Name = 1; // Job name. Must be unique
    string Region = 2; // Job run in this region normally.
    string schedule = 3;
    bool Shell = 4; // Use shell to run command
    string Command = 5; // Command to run
    string Expression = 6; // A expression used for filter agent node, job will run in the node when this expression is true
    repeated string BeingDependentJobs = 7; // Other jobs that depend on this job.
    string ParentJob = 8; // This job depends on the job.
    bool Parallel = 9; // Parallel policy for this job. if true, this job will run in all target node.
    bool Concurrent = 10; // Concurrent or not. if true, the next job will start regardless of whether or not the last time the execution is complete
    bool Disable = 11; // if true, job don't run
    string SchedulerNodeName = 12; // which node schedule this job
}

message JobStatus {
    string Name = 1;
    int64 SuccessCount = 2; // Number of successful executions of this job
    int64 ErrorCount = 3; // Number of errors of this job
    string LastHandleAgent = 4; // The agent node name which exec the job last time
    string LastSuccess = 5; // Last time this jon executed successful in rfc 3339
    string LastError = 6; // Last time this job failed
}

message Execution {
    string SchedulerNodeName = 1;
    bytes Output = 2;
    bool Succeed = 3;
    string StartTime = 4;
    string FinishTime = 5;
    string RunNodeName = 6;
    string JobName = 7;
    int64 Retries = 8; // Number of times to retry a execution
    int64 Group = 9;
    string Region = 10; // The region of job
}

message Result {
    int32 Status = 1;
    string Message = 2;
}